--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import '@mantine/core/styles.css';
+
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
@@ -9,4 +11,5 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
